--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button class="b1">Click Me!</button>
-    <button class="b2">No, Click Me!</button>
+    <button class="button one">Click Me!</button>
+    <button class="button two">No, Click Me!</button>
   </body>
 </html>
